tests/fixtures/invalid/pow_bytes_none_str.py
# Cannot call pow() with Bytes, None, Str
x = pow(b"hello", None, "hello")
